fix z-index of dialog in preview
the ui-dialog window was behind the editing area, so the z-index was defined

--- a/web/css/preview/preview-reset.css
+++ b/web/css/preview/preview-reset.css
@@ -14,3 +14,4 @@
 .ui-dialog{padding:0 !important;border:0 !important;}
 .ui-dialog .ui-dialog-content.ui-accordion > .ui-accordion-content{height:auto !important}
 #rapila_admin_menu .ui-widget,.ui-dialog.ui-widget{font-size:12px}
+.ui-dialog.ui-widget{z-index:1000}
